<resources>
    <string name="app_name">LifeCycle</string>
    <string name="on_create">onCreate</string>
    <string name="on_start">onStart</string>
    <string name="on_restart">onRestart</string>
    <string name="on_stop">onStop</string>
    <string name="on_pause">onPause</string>
    <string name="on_resume">onResume</string>
    <string name="reset">RESET</string>
    <string name="on_destroy">onDestroy</string>
    <string name="on_save_instance_state">onSaveInstanceState</string>
    <string name="on_restore_instance_state">onRestoreInstanceState</string>


</resources>
