<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">
    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">
        <TextView android:layout_width="0dp"
                  android:layout_weight="2"
                  android:layout_height="match_parent"
                  android:text="@string/on_create" android:textSize="18sp" android:textColor="@android:color/background_dark"
                  android:paddingLeft="20dp" android:paddingTop="4dp" android:paddingBottom="4dp"/>

        <TextView android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:textAlignment="center"
                  android:layout_weight="1"
                  android:gravity="center"
                  android:id="@+id/onCreate" android:textColor="@android:color/background_dark"/>
    </LinearLayout>
    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">
        <TextView android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_weight="2"
                  android:paddingLeft="20dp" android:paddingTop="4dp" android:paddingBottom="4dp"
                  android:text="@string/on_start" android:textSize="18sp" android:textColor="@android:color/background_dark"/>

        <TextView android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:textAlignment="center"
                  android:layout_weight="1"
                  android:gravity="center"
                  android:id="@+id/onStart" android:textColor="@android:color/background_dark"/>
    </LinearLayout>
    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">
        <TextView android:layout_width="0dp"
                  android:layout_weight="2"
                  android:layout_height="match_parent"
                  android:paddingLeft="20dp" android:paddingTop="4dp" android:paddingBottom="4dp"
                  android:text="@string/on_resume" android:textSize="18sp" android:textColor="@android:color/background_dark"/>

        <TextView android:layout_width="0dp"
                  android:layout_weight="1"
                  android:layout_height="match_parent"
                  android:textAlignment="center"
                  android:gravity="center"
                  android:id="@+id/onResume" android:textColor="@android:color/background_dark"/>
    </LinearLayout>
    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">
        <TextView android:layout_width="0dp"
                  android:layout_weight="2"
                  android:layout_height="match_parent"
                  android:paddingLeft="20dp" android:paddingTop="4dp" android:paddingBottom="4dp"
                  android:text="@string/on_restart" android:textSize="18sp" android:textColor="@android:color/background_dark"/>

        <TextView android:layout_width="0dp"
                  android:layout_weight="1"
                  android:layout_height="match_parent"
                  android:textAlignment="center"
                  android:gravity="center"
                  android:id="@+id/onRestart" android:textColor="@android:color/background_dark"/>
    </LinearLayout>
    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">
        <TextView android:layout_width="0dp"
                  android:layout_weight="2"
                  android:layout_height="match_parent"
                  android:paddingLeft="20dp" android:paddingTop="4dp" android:paddingBottom="4dp"
                  android:text="@string/on_pause" android:textSize="18sp" android:textColor="@android:color/background_dark"/>

        <TextView android:layout_width="0dp"
                  android:layout_weight="1"
                  android:layout_height="match_parent"
                  android:textAlignment="center"
                  android:gravity="center"
                  android:id="@+id/onPause" android:textColor="@android:color/background_dark"/>

    </LinearLayout>
    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">
        <TextView android:layout_width="0dp"
                  android:layout_weight="2"
                  android:layout_height="match_parent"
                  android:paddingLeft="20dp" android:paddingTop="4dp" android:paddingBottom="4dp"
                  android:text="@string/on_stop" android:textSize="18sp" android:textColor="@android:color/background_dark"/>

        <TextView android:layout_width="0dp"
                  android:layout_weight="1"
                  android:layout_height="match_parent"
                  android:textAlignment="center"
                  android:gravity="center"
                  android:id="@+id/onStop" android:textColor="@android:color/background_dark"/>

    </LinearLayout>
    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">
        <TextView android:layout_width="0dp"
                  android:layout_weight="2"
                  android:layout_height="match_parent"
                  android:paddingLeft="20dp" android:paddingTop="4dp" android:paddingBottom="4dp"
                  android:text="@string/on_destroy" android:textSize="18sp" android:textColor="@android:color/background_dark"/>

        <TextView android:layout_width="0dp"
                  android:layout_weight="1"
                  android:layout_height="match_parent"
                  android:textAlignment="center"
                  android:gravity="center"
                  android:id="@+id/onDestroy" android:textColor="@android:color/background_dark"/>

    </LinearLayout>
    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">
        <TextView android:layout_width="0dp"
                  android:layout_weight="2"
                  android:layout_height="match_parent"
                  android:paddingLeft="20dp" android:paddingTop="4dp" android:paddingBottom="4dp"
                  android:text="@string/on_save_instance_state" android:textSize="18sp" android:textColor="@android:color/background_dark"/>

        <TextView android:layout_width="0dp"
                  android:layout_weight="1"
                  android:layout_height="match_parent"
                  android:textAlignment="center"
                  android:gravity="center"
                  android:id="@+id/onSaveInstanceState" android:textColor="@android:color/background_dark"/>

    </LinearLayout>
    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">
        <TextView android:layout_width="0dp"
                  android:layout_weight="2"
                  android:layout_height="match_parent"
                  android:paddingLeft="20dp" android:paddingTop="4dp" android:paddingBottom="4dp"
                  android:text="@string/on_restore_instance_state" android:textSize="18sp" android:textColor="@android:color/background_dark"/>

        <TextView android:layout_width="0dp"
                  android:layout_weight="1"
                  android:layout_height="match_parent"
                  android:textAlignment="center"
                  android:gravity="center"
                  android:id="@+id/onRestoreInstanceState" android:textColor="@android:color/background_dark"/>

    </LinearLayout>
    <Button android:text="@string/reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reset" android:layout_marginTop="20dp"
            android:background="@color/colorPrimary" android:textColor="@android:color/background_light"
            android:textSize="14sp" android:textStyle="bold"/>
</LinearLayout>